tests/NormalTests/paczka1/fuzzy1/70709623.err
Error in line 5: 8BU6n A960 41,0
Error in line 18: BNcRRh A991 32,2
Error in line 7: 3RxVoqj6IW S478 42,2
Error in line 12: VN3 A991 109,1
Error in line 30: 3RxVoqj6IW Avv3 v1,9
Error in line 22: 3RxVoqj6IW A991 5,8
Error in line 32: EWZcPot A991 165,5
Error in line 37: 3RxVoqj6IW A773 245,9
